--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Build Next.js
         run: npm run build
 
+      - name: Copy CNAME to output
+        run: cp public/CNAME out/CNAME
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
